# elementary-desktop

./: .env  .gitignore  Cargo.toml
migrations/2021-01-31-111407_create_session/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: connection.rs  mod.rs  session.rs
src/matrix/: login.rs  message.rs  mod.rs  room.rs  subscriber.rs
src/screens/: elementary.rs  home.rs  login.rs  mod.rs  verify.rs
src/session/: mod.rs
src/theme/: dark.rs  style.rs
src/utils/: markdown.rs
