[package]
name = "elementary-desktop"
version = "0.1.0"
authors = ["samyak-jain <samtan106@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { version = "0.2.0", features = ["encryption", "sqlite_cryptostore", "unstable-synapse-quirks", "socks"] }
druid = { version = "0.7.0", features = ["svg"] }
url = "2.2.0"
futures = "0.3.12"
tracing-subscriber = "0.2.15"
