[package]
name = "elementary-desktop"
version = "0.1.0"
authors = ["samyak-jain <samtan106@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { path = "../../oss/matrix-rust-sdk/matrix_sdk" }
url = "2.2.0"
tokio = { version = "1.1.0", default-features = false, features = ["rt-multi-thread", "macros"] }
futures = "0.3.12"
tracing-subscriber = "0.2.15"
iced = { version = "0.2", features = ["svg", "tokio_old"] }
iced_native = "0.3.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
dotenv = "0.15.0"
toml = "0.5.8"
iced_futures = "0.2.0"
async-stream = "0.3.0"
