[package]
name = "elementary-desktop"
version = "0.1.0"
authors = ["samyak-jain <samtan106@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { path = "../../oss/matrix-rust-sdk/matrix_sdk" }
url = "2.2.0"
tokio = { version = "1.1.0", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3.12"
tracing-subscriber = "0.2.15"
iced = { git = "https://github.com/hecrj/iced", rev = "31522e3", features = ["svg", "tokio", "image"] }
iced_native = { git = "https://github.com/hecrj/iced", rev = "31522e3" }
num-traits = "0.2.14"
num-derive = "0.3.3"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
dotenv = "0.15.0"
toml = "0.5.8"
iced_futures = { git = "https://github.com/hecrj/iced", rev = "31522e3" }
async-stream = "0.3.0"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
time = "0.2.25"
comrak = "0.9.0"
